2007-06-30  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/StructureNodeBuilder.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/ClassNodeBuilder.cs, Navigation/Function.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/Namespace.cs, Navigation/LanguageItemCommandHandler.cs,
	  Navigation/Structure.cs, Navigation/GlobalsNodeBuilder.cs,
	  Navigation/LanguageItem.cs, Navigation/FunctionNodeBuilder.cs,
	  Navigation/Class.cs, Navigation/NamespaceNodeBuilder.cs,
	  Makefile.am, CBinding.addin.xml, CBinding.mdp: Added structures to
	  the class pad and refactored the code a bit more.

2007-06-29  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/TagDatabaseManager.cs,
	  Navigation/Namespace.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/GlobalsNodeBuilder.cs, Navigation/ClassNodeBuilder.cs,
	  Navigation/LanguageItem.cs, Navigation/Function.cs,
	  Navigation/Class.cs, Navigation/NamespaceNodeBuilder.cs,
	  gtk-gui/gui.stetic, Makefile.am, CBinding.addin.xml, CBinding.mdp:
	  Added support for classes in the class pad and refactored the code
	  a bit.

2007-06-27  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs: Created a new enum for access modifiers.
	* Navigation/TagDatabaseManager.cs: ctags now also creates tags for
	  function prototypes. (needed to identify a function's namespace if
	  any).
	* Navigation/Namespace.cs: Changed the separator between parent/child
	  namespaces in a namespace's FullName to :: from .
	* Navigation/ProjectNavigationInformation.cs: Added functions field.
	* Navigation/ProjectNodeBuilderExtension.cs: Added the special
	  "Globals" node.
	* Navigation/GlobalsNodeBuilder.cs, Navigation/FunctionNodeBuilder.cs,
	  Navigation/Function.cs: Added support for functions in the Class