@@ -1,3 +1,8 @@
+2007-07-01  Marcos David Marin Amador <MarcosMarin@gmail.com> 
+
+	* Navigation/Tag.cs, Navigation/LanguageItem.cs: Optimized memory usage
+	  by parsing fields as the tags a read in.
+
 2007-06-30  Marcos David Marin Amador <MarcosMarin@gmail.com> 
 
 	* Navigation/StructureNodeBuilder.cs,
